Unambiguous read plots correct compared to old implementation. Ambiguous reads are differently calculated now so that could be the reason for the difference.

--- a/masmvali/template/validate-template.html
+++ b/masmvali/template/validate-template.html
@@ -32,6 +32,8 @@
             <img src="{plotcp9}" />
             <img src="{plotcp10}" />
             <img src="{plotcp11}" />
+            <img src="{plotcp12}" />
+            <img src="{plotcp13}" />
         </p>
     </body>
 </html>
