Added plotting of validation between assemblies.

--- a/masmvali/template/validate-template.html
+++ b/masmvali/template/validate-template.html
@@ -26,14 +26,23 @@
             <img src="{plotcp3}" />
             <img src="{plotcp4}" />
             <img src="{plotcp5}" />
-            <img src="{plotcp6}" />
-            <img src="{plotcp7}" />
-            <img src="{plotcp8}" />
-            <img src="{plotcp9}" />
-            <img src="{plotcp10}" />
-            <img src="{plotcp11}" />
-            <img src="{plotcp12}" />
-            <img src="{plotcp13}" />
         </p>
+        <h2>Read LCA</h2>
+            <h3>Unambiguous reads</h3>
+            Reads mapping to one reference genome.
+            <p>
+                <img src="{plotlcaunamb1}" />
+                <img src="{plotlcaunamb2}" />
+                <img src="{plotlcaunamb3}" />
+                <img src="{plotlcaunamb4}" />
+            </p>
+            <h3>Ambiguous reads</h3>
+            Reads mapping to multiple reference genomes or one.
+            <p>
+                <img src="{plotlcaamb1}" />
+                <img src="{plotlcaamb2}" />
+                <img src="{plotlcaamb3}" />
+                <img src="{plotlcaamb4}" />
+            </p>
     </body>
 </html>
