Major update. Change the way metagenome coverage is computed, now count contigs only once. Fixed bug that genome-contig-cov is overwitten again with 0.

--- a/masmvali/template/validate-template.html
+++ b/masmvali/template/validate-template.html
@@ -18,6 +18,8 @@
             <img src="{plotgc1}" />
             <img src="{plotgc2}" />
             <img src="{plotgc3}" />
+            <img src="{plotgc4}" />
+            <img src="{plotgc5}" />
         </p>
         <h2>Contig purity</h2>
         <p>
